--- a/Hash_Table_Implementation/Hash_Table_Implementation.cbp
+++ b/Hash_Table_Implementation/Hash_Table_Implementation.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="hash_table.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="hash_table.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
